--- a/emotion_classifier_LR.ipynb
+++ b/emotion_classifier_LR.ipynb
@@ -154,7 +154,11 @@
         "X_test = vectorizer.transform(X_test_text)\n",
         "\n",
         "# Initialize and train logistic regression model\n",
-        "model = LogisticRegression(random_state=42, max_iter=1000)\n",
+        "# model = LogisticRegression(random_state=42, max_iter=1000)\n",
+        "# model.fit(X_train, y_train)\n",
+        "\n",
+        "model = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
+        "                    hidden_layer_sizes=(5, 2), random_state=1)\n",
         "model.fit(X_train, y_train)\n",
         "\n",
         "# Make predictions on train and test sets\n",
