--- a/emotion_classifier_LR.ipynb
+++ b/emotion_classifier_LR.ipynb
@@ -39,24 +39,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yy0zjL_2ouOU",
-        "outputId": "9d377000-69c8-4794-afe1-58ef3a50f547"
+        "outputId": "95b700b8-cdbe-425e-fc8e-99d4b8887c3b"
       },
       "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Number of training examples: 18000\n",
+            "Number of test examples: 2000\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+            "  warnings.warn(\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Number of training examples: 18000\n",
-            "Number of test examples: 2000\n",
             "\n",
-            "Train accuracy: 0.9854\n",
-            "Test accuracy: 0.8855\n",
+            "Train accuracy: 0.9822\n",
+            "Test accuracy: 0.7160\n",
             "\n",
             "--- Better hyperparameters ---\n",
             "Train accuracy: 0.9962\n",
@@ -73,7 +90,7 @@
         "from sklearn.feature_extraction.text import CountVectorizer # Text vectorization utility\n",
         "from sklearn.linear_model import LogisticRegression         # Logistic regression model\n",
         "from sklearn.metrics import accuracy_score                  # For model evaluation\n",
-        "from sklearn.neural_network import MLPClassifier\n",
+        "from sklearn.neural_network import MLPClassifier            # Neural Network model\n",
         "\n",
         "# ----------------------------\n",
         "# Utility Functions\n",
@@ -157,8 +174,8 @@
         "# model = LogisticRegression(random_state=42, max_iter=1000)\n",
         "# model.fit(X_train, y_train)\n",
         "\n",
-        "model = MLPClassifier(solver='lbfgs', alpha=1e-5,\n",
-        "                    hidden_layer_sizes=(5, 2), random_state=1)\n",
+        "model = MLPClassifier(solver='adam', alpha=1e-3,\n",
+        "                    hidden_layer_sizes=(2, 2), random_state=42)\n",
         "model.fit(X_train, y_train)\n",
         "\n",
         "# Make predictions on train and test sets\n",
@@ -172,33 +189,33 @@
         "print(f\"\\nTrain accuracy: {train_accuracy:.4f}\")\n",
         "print(f\"Test accuracy: {test_accuracy:.4f}\")\n",
         "\n",
-        "# ----------------------------\n",
-        "# Improved Model\n",
-        "# ----------------------------\n",
+        "# # ----------------------------\n",
+        "# # Improved Model\n",
+        "# # ----------------------------\n",
         "\n",
-        "print(\"\\n--- Better hyperparameters ---\")\n",
+        "# print(\"\\n--- Better hyperparameters ---\")\n",
         "\n",
-        "# Initialize vectorizer with improved parameters\n",
-        "# max_features=20000: Increased vocabulary size\n",
-        "# ngram_range=(1, 2): Include both unigrams and bigrams\n",
-        "vectorizer = CountVectorizer(max_features=20000, ngram_range=(1, 2))\n",
+        "# # Initialize vectorizer with improved parameters\n",
+        "# # max_features=20000: Increased vocabulary size\n",
+        "# # ngram_range=(1, 2): Include both unigrams and bigrams\n",
+        "# vectorizer = CountVectorizer(max_features=20000, ngram_range=(1, 2))\n",
         "\n",
-        "# Transform text data with new vectorizer\n",
-        "X_train = vectorizer.fit_transform(X_train_text)\n",
-        "X_test = vectorizer.transform(X_test_text)\n",
+        "# # Transform text data with new vectorizer\n",
+        "# X_train = vectorizer.fit_transform(X_train_text)\n",
+        "# X_test = vectorizer.transform(X_test_text)\n",
         "\n",
-        "# Train and evaluate model with same parameters\n",
-        "model = LogisticRegression(random_state=42, max_iter=1000)\n",
-        "model.fit(X_train, y_train)\n",
+        "# # Train and evaluate model with same parameters\n",
+        "# model = LogisticRegression(random_state=42, max_iter=1000)\n",
+        "# model.fit(X_train, y_train)\n",
         "\n",
-        "y_train_pred = model.predict(X_train)\n",
-        "y_test_pred = model.predict(X_test)\n",
+        "# y_train_pred = model.predict(X_train)\n",
+        "# y_test_pred = model.predict(X_test)\n",
         "\n",
-        "train_accuracy = accuracy_score(y_train, y_train_pred)\n",
-        "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+        "# train_accuracy = accuracy_score(y_train, y_train_pred)\n",
+        "# test_accuracy = accuracy_score(y_test, y_test_pred)\n",
         "\n",
-        "print(f\"Train accuracy: {train_accuracy:.4f}\")\n",
-        "print(f\"Test accuracy: {test_accuracy:.4f}\")"
+        "# print(f\"Train accuracy: {train_accuracy:.4f}\")\n",
+        "# print(f\"Test accuracy: {test_accuracy:.4f}\")"
       ]
     }
   ],
